Fixing spacing for Carousel

--- a/css/disney.css
+++ b/css/disney.css
@@ -1,6 +1,5 @@
 .carousel {
   padding-top: 120px;
-  padding-bottom: 20px;
   overflow: hidden;
 }
 
